--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
+    "@types/lodash": "^4.14.186",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lorem-ipsum": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
